[b]Version 0.6.10[/b]:

(2011-12-05)
 * Patch by Silvan Scherrer <silvan.scherrer@aroa.ch> to add support for
   eCS, OS/2.

(2011-12-03)
 * Removed the option "Visualize motion vectors". It caused problems to many
   people when activated by mistake.

(2010-12-07)
 * Added a submenu to select the closed caption channel. 
   Requires mplayer >= r32607.

(2010-09-03)
 * Added webm and vp8 to the list of extensions (for video).

(2010-07-30)
 * Added thd to the list of extensions (for audio).

(2010-04-28)
 * Added hdmov to the list of extensions (for video).

(2010-04-22)
 * Added f4v to the list of extensions (for video).

(2010-04-14)
 * (Experimental) If using mplayer svn r31030, the audio filters (karaoke, 
   extrastereo and volnorm) are changed without restarting mplayer, using the
   new slave commands af_add and af_del.

(2010-03-22)
 * For consistency, the playlist preferences have been moved to the
   playlist section in the main preferences dialog (and the playlist own
   preferences dialog has been deleted).
 * Added the Danish translation, by Martin Schlander <mschlander@opensuse.org>

(2010-03-01)
 * Added the possibility to select the seeking method (absolute or relative) in
   Preferences -> Interface.

(2010-02-25)
 * Possibility to sort the items of the playlist. Implemented by 
   Neo254 <manuel.ohrndorf@gmx.net> 
   http://smplayer.berlios.de/forum/viewtopic.php?p=423#p423


[b]Version 0.6.9[/b]:

(2010-02-18)
 * New option for smplayer.ini: relative_seeking (section [gui]). If true
   seeking (with the time slider) will be done by using a percentage. If false
   seeking will be done using an absolute time. The default value for this
   option is true.

(2010-02-09)
 * Fix: using now -af channels to select the left or right audio channel, as 
   it seems the -stereo option in mplayer doesn't work as expected.
   Should fix bug #1962349.

(2010-02-02)
 * Added a new action to toggle deinterlacing (assigned to key D). It just 